--- a/BikeSharingDask_KhaligianAreknaz.ipynb
+++ b/BikeSharingDask_KhaligianAreknaz.ipynb
@@ -37,15 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dask.dataframe as dd\n",
     "\n",
     "from dask_ml.preprocessing import Categorizer, DummyEncoder, StandardScaler\n",
-    "from dask_ml.linear_model import LogisticRegression\n",
     "from dask_ml.xgboost import XGBRegressor\n",
+    "from dask.distributed import Client\n",
+    "import dask_ml.model_selection as dcv\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.externals.joblib import parallel_backend\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "\n",
     "from scipy.stats import skew, pearsonr"
    ]
@@ -231,6 +236,7 @@
     }
    ],
    "source": [
+    "# read csv from the web\n",
     "dataset = dd.read_csv('https://s3.eu-central-1.amazonaws.com/ie-mbd-advpython-ml-bikesharing-dask/hour.csv')\n",
     "\n",
     "dataset.head()"
@@ -279,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -486,185 +492,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert season, yr, mnth, hr, holiday, weekday, workingday, weathersit to categorical datatybe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dteday</th>\n",
-       "      <th>season</th>\n",
-       "      <th>yr</th>\n",
-       "      <th>mnth</th>\n",
-       "      <th>hr</th>\n",
-       "      <th>holiday</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>workingday</th>\n",
-       "      <th>weathersit</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>atemp</th>\n",
-       "      <th>hum</th>\n",
-       "      <th>windspeed</th>\n",
-       "      <th>casual</th>\n",
-       "      <th>registered</th>\n",
-       "      <th>cnt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>13</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.2727</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.2727</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>27</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.2879</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      dteday season yr mnth hr holiday weekday workingday weathersit  temp  \\\n",
-       "0 2011-01-01      1  0    1  0       0       6          0          1  0.24   \n",
-       "1 2011-01-01      1  0    1  1       0       6          0          1  0.22   \n",
-       "2 2011-01-01      1  0    1  2       0       6          0          1  0.22   \n",
-       "3 2011-01-01      1  0    1  3       0       6          0          1  0.24   \n",
-       "4 2011-01-01      1  0    1  4       0       6          0          1  0.24   \n",
-       "\n",
-       "    atemp   hum  windspeed  casual  registered  cnt  \n",
-       "0  0.2879  0.81        0.0       3          13   16  \n",
-       "1  0.2727  0.80        0.0       8          32   40  \n",
-       "2  0.2727  0.80        0.0       5          27   32  \n",
-       "3  0.2879  0.75        0.0       3          10   13  \n",
-       "4  0.2879  0.75        0.0       0           1    1  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categories = ['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit']\n",
-    "categorizer = Categorizer(columns= categories)\n",
-    "dataset = categorizer.fit_transform(dataset)\n",
-    "dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Check skewness and range for temp, atemp, hum, windspeed, casual, registerd, cnt\n",
     "\n",
     "(We see that only casual/registered/cnt are very skewed, but we will plan to scale all the variables before training, so this will solve the issue)"
@@ -672,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -742,9 +569,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp vs atemp: (0.9876721390396487, 0.0)\n",
+      "temp vs cnt: (0.4047722757786586, 0.0)\n",
+      "atemp vs cnt: (0.40092930412663186, 0.0)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"temp vs atemp:\", pearsonr(dataset['temp'], dataset['atemp']))\n",
     "\n",
@@ -764,11 +601,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dteday</th>\n",
+       "      <th>season</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>mnth</th>\n",
+       "      <th>hr</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weathersit</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>registered</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      dteday  season  yr  mnth  hr  holiday  weekday  workingday  weathersit  \\\n",
+       "0 2011-01-01       1   0     1   0        0        6           0           1   \n",
+       "1 2011-01-01       1   0     1   1        0        6           0           1   \n",
+       "2 2011-01-01       1   0     1   2        0        6           0           1   \n",
+       "3 2011-01-01       1   0     1   3        0        6           0           1   \n",
+       "4 2011-01-01       1   0     1   4        0        6           0           1   \n",
+       "\n",
+       "   temp   hum  windspeed  registered  cnt  \n",
+       "0  0.24  0.81        0.0          13   16  \n",
+       "1  0.22  0.80        0.0          32   40  \n",
+       "2  0.22  0.80        0.0          27   32  \n",
+       "3  0.24  0.75        0.0          10   13  \n",
+       "4  0.24  0.75        0.0           1    1  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = dataset.drop(['casual','atemp'], axis =1)\n",
     "dataset.head()"
@@ -778,29 +763,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dummy Encoding\n",
+    "### Basic Pipelines\n",
     "\n",
-    "Before training the models we need to dummy encode the categorical variables"
+    "In these pipeline we first convert the categorical variables to type category, then we dummy encode these variables and scale the numeric variables before running an XGBoost Regressor or Linear Regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list of categorical variables\n",
+    "categories = ['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up pipelines\n",
+    "pipe_xgb = make_pipeline(\n",
+    "    Categorizer(columns=categories),\n",
+    "    DummyEncoder(),\n",
+    "    StandardScaler(),\n",
+    "    XGBRegressor()\n",
+    ")\n",
+    "\n",
+    "pipe_lin = make_pipeline(\n",
+    "    Categorizer(columns=categories),\n",
+    "    DummyEncoder(),\n",
+    "    StandardScaler(),\n",
+    "    LinearRegression()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop dteday since we already know the index at which to do the train/test split\n",
+    "dataset = dataset.drop('dteday', axis=1)\n",
+    "\n",
+    "# set y, target variable\n",
+    "y = dataset['cnt']\n",
+    "\n",
+    "# set the rest of the dataset to be X, the features\n",
+    "X = dataset.drop('cnt',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train test split\n",
+    "y_train = y.loc[:17117]\n",
+    "y_test = y.loc[17118:]\n",
+    "X_train = X.loc[:17117,:]\n",
+    "X_test = X.loc[17118:,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we can see that the XGBoost Model performs better than the Linear Model, both in terms of overall score and ability to generalize (the difference between the train and test score is lower)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xgb_train score: 0.9872585404961298\n",
+      "xgb_test_score: 0.9636984843514378\n",
+      "lin_train score: 0.9741143724760584\n",
+      "lin_test_score: 0.8957396182956116\n"
+     ]
+    }
+   ],
+   "source": [
+    "# connect to dask, train models, and print accuracy scores\n",
+    "\n",
+    "client = Client()  # Connect to a Dask Cluster\n",
+    "\n",
+    "with parallel_backend('dask'):\n",
+    "    pipe_xgb.fit(X_train, y_train)\n",
+    "    print(\"xgb_train score:\", pipe_xgb.score(X_train, y_train))\n",
+    "    print(\"xgb_test_score:\", pipe_xgb.score(X_test, y_test))\n",
+    "    \n",
+    "    pipe_lin.fit(X_train, y_train)\n",
+    "    print(\"lin_train score:\", pipe_lin.score(X_train, y_train))\n",
+    "    print(\"lin_test_score:\", pipe_lin.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline with GridSearchCV "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\akhaligian\\Anaconda3\\lib\\site-packages\\distributed\\bokeh\\core.py:57: UserWarning: \n",
+      "Port 8787 is already in use. \n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the diagnostics dashboard on a random port instead.\n",
+      "  warnings.warn('\\n' + msg)\n"
+     ]
+    }
+   ],
    "source": [
-    "de = DummyEncoder(columns = categories)\n",
+    "pipe_xgb_cv = make_pipeline(\n",
+    "    Categorizer(columns=categories),\n",
+    "    DummyEncoder(),\n",
+    "    StandardScaler(),\n",
+    "    dcv.GridSearchCV(\n",
+    "        XGBRegressor(),\n",
+    "        param_grid={\n",
+    "            \"learning_rate\": [0.01, 0.05, 0.1],\n",
+    "            \"max_depth\": [6, 7, 8],\n",
+    "            \"n_estimators\": [1000],\n",
+    "        },\n",
+    "        cv=3,\n",
+    "        refit=True,\n",
+    "    ),\n",
+    ")\n",
     "\n",
-    "dataset = de.fit_transform(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.head()"
+    "client = Client()  # Connect to a Dask Cluster\n",
+    "\n",
+    "with parallel_backend('dask'):\n",
+    "    pipe_xgb_cv.fit(X_train, y_train)\n",
+    "    print(\"xgb_train score:\", pipe_xgb_cv.score(X_train, y_train))\n",
+    "    print(\"xgb_test_score:\", pipe_xgb_cv.score(X_test, y_test))"
    ]
   }
  ],
