added gridsearch and finishing touches

--- a/BikeSharingDask_KhaligianAreknaz.ipynb
+++ b/BikeSharingDask_KhaligianAreknaz.ipynb
@@ -37,20 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dask.dataframe as dd\n",
-    "\n",
     "from dask_ml.preprocessing import Categorizer, DummyEncoder, StandardScaler\n",
-    "from dask_ml.xgboost import XGBRegressor\n",
     "from dask.distributed import Client\n",
     "import dask_ml.model_selection as dcv\n",
     "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.externals.joblib import parallel_backend\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from scipy.stats import skew, pearsonr"
    ]
@@ -236,9 +236,10 @@
     }
    ],
    "source": [
-    "# read csv from the web\n",
+    "# read csv from url\n",
     "dataset = dd.read_csv('https://s3.eu-central-1.amazonaws.com/ie-mbd-advpython-ml-bikesharing-dask/hour.csv')\n",
     "\n",
+    "# print sample of the dataset\n",
     "dataset.head()"
    ]
   },
@@ -765,7 +766,7 @@
    "source": [
     "### Basic Pipelines\n",
     "\n",
-    "In these pipeline we first convert the categorical variables to type category, then we dummy encode these variables and scale the numeric variables before running an XGBoost Regressor or Linear Regression."
+    "In these pipeline we first convert the categorical variables to type category, then we dummy encode these variables and scale the numeric variables before running an Random Forest Regressor or Linear Regression."
    ]
   },
   {
@@ -780,29 +781,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set up pipelines\n",
-    "pipe_xgb = make_pipeline(\n",
-    "    Categorizer(columns=categories),\n",
-    "    DummyEncoder(),\n",
-    "    StandardScaler(),\n",
-    "    XGBRegressor()\n",
-    ")\n",
     "\n",
     "pipe_lin = make_pipeline(\n",
     "    Categorizer(columns=categories),\n",
     "    DummyEncoder(),\n",
     "    StandardScaler(),\n",
-    "    LinearRegression()\n",
+    "    LinearRegression(),\n",
+    ")\n",
+    "\n",
+    "pipe_rf = make_pipeline(\n",
+    "    Categorizer(columns=categories),\n",
+    "    DummyEncoder(),\n",
+    "    StandardScaler(),\n",
+    "    RandomForestRegressor(),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('categorizer', Categorizer(categories=None,\n",
+       "        columns=['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit'])),\n",
+       " ('dummyencoder', DummyEncoder(columns=None, drop_first=False)),\n",
+       " ('standardscaler', StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       " ('linearregression',\n",
+       "  LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "           normalize=False))]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print pipleine steps\n",
+    "pipe_lin.steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('categorizer', Categorizer(categories=None,\n",
+       "        columns=['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit'])),\n",
+       " ('dummyencoder', DummyEncoder(columns=None, drop_first=False)),\n",
+       " ('standardscaler', StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       " ('randomforestregressor',\n",
+       "  RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "             max_features='auto', max_leaf_nodes=None,\n",
+       "             min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "             min_samples_leaf=1, min_samples_split=2,\n",
+       "             min_weight_fraction_leaf=0.0, n_estimators='warn', n_jobs=None,\n",
+       "             oob_score=False, random_state=None, verbose=0, warm_start=False))]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print pipeline steps \n",
+    "pipe_rf.steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline with GridSearchCV "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up pipeline with labels to prepare for grid search\n",
+    "pipe_rf2 = Pipeline(\n",
+    "        [\n",
+    "        (\"categorizer\", Categorizer(columns=categories)),\n",
+    "        (\"dummifier\", DummyEncoder()),\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\"rf\", RandomForestRegressor()),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# set up grid search\n",
+    "pipe_rf_cv = dcv.GridSearchCV(\n",
+    "    pipe_rf2,\n",
+    "    param_grid={\n",
+    "        \"rf__max_features\": [10,20,30,40,50,60], # tune max_features aka mtry\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cache_cv=True, cv=None, error_score='raise',\n",
+       "       estimator=Pipeline(memory=None,\n",
+       "     steps=[('categorizer', Categorizer(categories=None,\n",
+       "      columns=['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit'])), ('dummifier', DummyEncoder(columns=None, drop_first=False)), ('scaler', StandardScaler(copy=True, with_mean=True, with_std=True)), ('rf', RandomForest...s='warn', n_jobs=None,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False))]),\n",
+       "       iid=True, n_jobs=-1,\n",
+       "       param_grid={'rf__max_features': [10, 20, 30, 40, 50, 60]},\n",
+       "       refit=True, return_train_score='warn', scheduler=None, scoring=None)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print summary\n",
+    "pipe_rf_cv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,8 +939,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train Test Split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,87 +969,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that the XGBoost Model performs better than the Linear Model, both in terms of overall score and ability to generalize (the difference between the train and test score is lower)."
+    "#### Start Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xgb_train score: 0.9872585404961298\n",
-      "xgb_test_score: 0.9636984843514378\n",
-      "lin_train score: 0.9741143724760584\n",
-      "lin_test_score: 0.8957396182956116\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table style=\"border: 2px solid white;\">\n",
+       "<tr>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3>Client</h3>\n",
+       "<ul>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:57641\n",
+       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a>\n",
+       "</ul>\n",
+       "</td>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3>Cluster</h3>\n",
+       "<ul>\n",
+       "  <li><b>Workers: </b>4</li>\n",
+       "  <li><b>Cores: </b>4</li>\n",
+       "  <li><b>Memory: </b>8.23 GB</li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Client: scheduler='tcp://127.0.0.1:57641' processes=4 cores=4>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# connect to dask, train models, and print accuracy scores\n",
-    "\n",
     "client = Client()  # Connect to a Dask Cluster\n",
-    "\n",
-    "with parallel_backend('dask'):\n",
-    "    pipe_xgb.fit(X_train, y_train)\n",
-    "    print(\"xgb_train score:\", pipe_xgb.score(X_train, y_train))\n",
-    "    print(\"xgb_test_score:\", pipe_xgb.score(X_test, y_test))\n",
-    "    \n",
-    "    pipe_lin.fit(X_train, y_train)\n",
-    "    print(\"lin_train score:\", pipe_lin.score(X_train, y_train))\n",
-    "    print(\"lin_test_score:\", pipe_lin.score(X_test, y_test))"
+    "client"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pipeline with GridSearchCV "
+    "#### Train models with parallel backend\n",
+    "Here we can see that the Random Forest Model performs better than the Linear Model, both in terms of overall score and ability to generalize (the difference between the train and test score is lower).          \n",
+    "\n",
+    "When running a grid search cv for the random forest model, max_features = 60 is the optimal parameter setting and greatly improves the model accuracy.  Now the train and test score are nearly identical, and higher than the original Random Forest test-score which means the model is more accurate and is better able to generalize."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lin_train score: 0.9741143724760584\n",
+      "lin_test_score: 0.8957396182956116\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\akhaligian\\Anaconda3\\lib\\site-packages\\distributed\\bokeh\\core.py:57: UserWarning: \n",
-      "Port 8787 is already in use. \n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the diagnostics dashboard on a random port instead.\n",
-      "  warnings.warn('\\n' + msg)\n"
+      "C:\\Users\\akhaligian\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_train score: 0.9980570487042165\n",
+      "rf_test_score: 0.9623662633345436\n",
+      "rf_cv_train score: 0.9999109288173633\n",
+      "rf_cv_test_score: 0.9947093551312931\n"
      ]
     }
    ],
    "source": [
-    "pipe_xgb_cv = make_pipeline(\n",
-    "    Categorizer(columns=categories),\n",
-    "    DummyEncoder(),\n",
-    "    StandardScaler(),\n",
-    "    dcv.GridSearchCV(\n",
-    "        XGBRegressor(),\n",
-    "        param_grid={\n",
-    "            \"learning_rate\": [0.01, 0.05, 0.1],\n",
-    "            \"max_depth\": [6, 7, 8],\n",
-    "            \"n_estimators\": [1000],\n",
-    "        },\n",
-    "        cv=3,\n",
-    "        refit=True,\n",
-    "    ),\n",
-    ")\n",
+    "# connect to dask, train models, and print accuracy scores\n",
     "\n",
-    "client = Client()  # Connect to a Dask Cluster\n",
+    "with parallel_backend(\"dask\"):\n",
     "\n",
-    "with parallel_backend('dask'):\n",
-    "    pipe_xgb_cv.fit(X_train, y_train)\n",
-    "    print(\"xgb_train score:\", pipe_xgb_cv.score(X_train, y_train))\n",
-    "    print(\"xgb_test_score:\", pipe_xgb_cv.score(X_test, y_test))"
+    "    pipe_lin.fit(X_train, y_train)\n",
+    "    print(\"lin_train score:\", pipe_lin.score(X_train, y_train))\n",
+    "    print(\"lin_test_score:\", pipe_lin.score(X_test, y_test))\n",
+    "\n",
+    "    pipe_rf.fit(X_train, y_train)\n",
+    "    print(\"rf_train score:\", pipe_rf.score(X_train, y_train))\n",
+    "    print(\"rf_test_score:\", pipe_rf.score(X_test, y_test))\n",
+    "    \n",
+    "    pipe_rf_cv.fit(X_train.compute(), y_train.compute())\n",
+    "    print(\"rf_cv_train score:\", pipe_rf_cv.score(X_train.compute(), y_train.compute()))\n",
+    "    print(\"rf_cv_test_score:\", pipe_rf_cv.score(X_test.compute(), y_test.compute()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rf__max_features': 60}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print best parameters from grid search\n",
+    "pipe_rf_cv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# disconnect from client\n",
+    "client.close()"
    ]
   }
  ],
