--- a/BikeSharingDask_KhaligianAreknaz.ipynb
+++ b/BikeSharingDask_KhaligianAreknaz.ipynb
@@ -237,7 +237,9 @@
    ],
    "source": [
     "# read csv from url\n",
-    "dataset = dd.read_csv('https://s3.eu-central-1.amazonaws.com/ie-mbd-advpython-ml-bikesharing-dask/hour.csv')\n",
+    "dataset = dd.read_csv(\n",
+    "    \"https://s3.us-east-2.amazonaws.com/bikedata/hour.csv\"\n",
+    ")\n",
     "\n",
     "# print sample of the dataset\n",
     "dataset.head()"
@@ -260,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -450,7 +454,7 @@
     }
    ],
    "source": [
-    "dataset = dataset.drop('instant', axis =1)\n",
+    "dataset = dataset.drop(\"instant\", axis=1)\n",
     "dataset.head()"
    ]
   },
@@ -485,8 +489,8 @@
     }
    ],
    "source": [
-    "dataset['dteday']=dataset['dteday'].astype('M8')\n",
-    "dataset['dteday'].head()"
+    "dataset[\"dteday\"] = dataset[\"dteday\"].astype(\"M8\")\n",
+    "dataset[\"dteday\"].head()"
    ]
   },
   {
@@ -532,7 +536,7 @@
     }
    ],
    "source": [
-    "numerics = ['temp', 'atemp', 'hum', 'windspeed', 'casual', 'registered', 'cnt']\n",
+    "numerics = [\"temp\", \"atemp\", \"hum\", \"windspeed\", \"casual\", \"registered\", \"cnt\"]\n",
     "for n in numerics:\n",
     "    print(n)\n",
     "    print(skew(dataset[n]))\n",
@@ -563,9 +567,9 @@
     }
    ],
    "source": [
-    "print(\"casual vs cnt:\",pearsonr(dataset['casual'], dataset['cnt']))\n",
+    "print(\"casual vs cnt:\", pearsonr(dataset[\"casual\"], dataset[\"cnt\"]))\n",
     "\n",
-    "print(\"registered vs cnt:\", pearsonr(dataset['registered'], dataset['cnt']))"
+    "print(\"registered vs cnt:\", pearsonr(dataset[\"registered\"], dataset[\"cnt\"]))"
    ]
   },
   {
@@ -584,11 +588,11 @@
     }
    ],
    "source": [
-    "print(\"temp vs atemp:\", pearsonr(dataset['temp'], dataset['atemp']))\n",
+    "print(\"temp vs atemp:\", pearsonr(dataset[\"temp\"], dataset[\"atemp\"]))\n",
     "\n",
-    "print(\"temp vs cnt:\", pearsonr(dataset['temp'], dataset['cnt']))\n",
+    "print(\"temp vs cnt:\", pearsonr(dataset[\"temp\"], dataset[\"cnt\"]))\n",
     "\n",
-    "print(\"atemp vs cnt:\", pearsonr(dataset['atemp'], dataset['cnt']))"
+    "print(\"atemp vs cnt:\", pearsonr(dataset[\"atemp\"], dataset[\"cnt\"]))"
    ]
   },
   {
@@ -756,7 +760,7 @@
     }
    ],
    "source": [
-    "dataset = dataset.drop(['casual','atemp'], axis =1)\n",
+    "dataset = dataset.drop([\"casual\", \"atemp\"], axis=1)\n",
     "dataset.head()"
    ]
   },
@@ -776,7 +780,16 @@
    "outputs": [],
    "source": [
     "# list of categorical variables\n",
-    "categories = ['season', 'yr', 'mnth', 'hr', 'holiday', 'weekday', 'workingday', 'weathersit']"
+    "categories = [\n",
+    "    \"season\",\n",
+    "    \"yr\",\n",
+    "    \"mnth\",\n",
+    "    \"hr\",\n",
+    "    \"holiday\",\n",
+    "    \"weekday\",\n",
+    "    \"workingday\",\n",
+    "    \"weathersit\",\n",
+    "]"
    ]
   },
   {
@@ -858,7 +871,7 @@
     }
    ],
    "source": [
-    "# print pipeline steps \n",
+    "# print pipeline steps\n",
     "pipe_rf.steps"
    ]
   },
@@ -877,7 +890,7 @@
    "source": [
     "# set up pipeline with labels to prepare for grid search\n",
     "pipe_rf2 = Pipeline(\n",
-    "        [\n",
+    "    [\n",
     "        (\"categorizer\", Categorizer(columns=categories)),\n",
     "        (\"dummifier\", DummyEncoder()),\n",
     "        (\"scaler\", StandardScaler()),\n",
@@ -889,7 +902,7 @@
     "pipe_rf_cv = dcv.GridSearchCV(\n",
     "    pipe_rf2,\n",
     "    param_grid={\n",
-    "        \"rf__max_features\": [10,20,30,40,50,60], # tune max_features aka mtry\n",
+    "        \"rf__max_features\": [10, 20, 30, 40, 50, 60]  # tune max_features aka mtry\n",
     "    },\n",
     ")"
    ]
@@ -929,13 +942,13 @@
    "outputs": [],
    "source": [
     "# drop dteday since we already know the index at which to do the train/test split\n",
-    "dataset = dataset.drop('dteday', axis=1)\n",
+    "dataset = dataset.drop(\"dteday\", axis=1)\n",
     "\n",
     "# set y, target variable\n",
-    "y = dataset['cnt']\n",
+    "y = dataset[\"cnt\"]\n",
     "\n",
     "# set the rest of the dataset to be X, the features\n",
-    "X = dataset.drop('cnt',axis=1)"
+    "X = dataset.drop(\"cnt\", axis=1)"
    ]
   },
   {
@@ -961,8 +974,8 @@
     "# train test split\n",
     "y_train = y.loc[:17117]\n",
     "y_test = y.loc[17118:]\n",
-    "X_train = X.loc[:17117,:]\n",
-    "X_test = X.loc[17118:,:]"
+    "X_train = X.loc[:17117, :]\n",
+    "X_test = X.loc[17118:, :]"
    ]
   },
   {
@@ -985,7 +998,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3>Client</h3>\n",
        "<ul>\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:57641\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:61259\n",
        "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a>\n",
        "</ul>\n",
        "</td>\n",
@@ -1001,7 +1014,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: scheduler='tcp://127.0.0.1:57641' processes=4 cores=4>"
+       "<Client: scheduler='tcp://127.0.0.1:61259' processes=4 cores=4>"
       ]
      },
      "execution_count": 18,
@@ -1051,10 +1064,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf_train score: 0.9980570487042165\n",
-      "rf_test_score: 0.9623662633345436\n",
-      "rf_cv_train score: 0.9999109288173633\n",
-      "rf_cv_test_score: 0.9947093551312931\n"
+      "rf_train score: 0.9981888287077578\n",
+      "rf_test_score: 0.962491566016032\n",
+      "rf_cv_train score: 0.9999132377520243\n",
+      "rf_cv_test_score: 0.994755778597526\n"
      ]
     }
    ],
@@ -1070,7 +1083,7 @@
     "    pipe_rf.fit(X_train, y_train)\n",
     "    print(\"rf_train score:\", pipe_rf.score(X_train, y_train))\n",
     "    print(\"rf_test_score:\", pipe_rf.score(X_test, y_test))\n",
-    "    \n",
+    "\n",
     "    pipe_rf_cv.fit(X_train.compute(), y_train.compute())\n",
     "    print(\"rf_cv_train score:\", pipe_rf_cv.score(X_train.compute(), y_train.compute()))\n",
     "    print(\"rf_cv_test_score:\", pipe_rf_cv.score(X_test.compute(), y_test.compute()))"
